--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "tq-bit",
 	"license": "MIT",
 	"dependencies": {
+		"ajv": "^8.12.0",
 		"axios": "^1.1.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
