--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@sinclair/typebox": "^0.25.21",
 		"ajv": "^8.12.0",
+		"ajv-formats": "^2.1.1",
 		"axios": "^1.1.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
