--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"nodemon": "^2.0.15",
 		"rimraf": "^3.0.2",
 		"rollup": "^3.10.0",
+		"rollup-plugin-scss": "^3.0.0",
+		"sass": "^1.57.1",
 		"ts-node": "^10.4.0"
 	}
 }
