--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"ajv": "^8.12.0",
 		"ajv-formats": "^2.1.1",
 		"axios": "^1.1.3",
+		"bulma": "^0.9.4",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.17.1",
