--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"axios": "^1.1.3",
 		"bulma": "^0.9.4",
 		"cors": "^2.8.5",
+		"css.gg": "^2.0.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.17.1",
 		"express-handlebars": "^6.0.2",
