--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/express-handlebars": "^6.0.0",
+		"@types/jsonwebtoken": "^9.0.1",
 		"@types/luxon": "^3.2.0",
 		"@types/node": "^17.0.0",
 		"concurrently": "^7.6.0",
