--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 	"license": "MIT",
 	"dependencies": {
 		"@sinclair/typebox": "^0.25.21",
+		"@types/bcrypt": "^5.0.0",
 		"ajv": "^8.12.0",
 		"ajv-formats": "^2.1.1",
 		"axios": "^1.1.3",
+		"bcrypt": "^5.1.0",
 		"bulma": "^0.9.4",
 		"cors": "^2.8.5",
 		"css.gg": "^2.0.0",
