--- a/src/server/config/config.json
+++ b/src/server/config/config.json
@@ -1,1 +1,8 @@
-{"admin":{"enableUserCreation":true}}
+{
+	"admin": {
+		"users": {
+			"enableUserCreation": true,
+			"initialUserWasCreated": false
+		}
+	}
+}
