--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"axios": "^1.1.3",
 		"bcrypt": "^5.1.0",
 		"bulma": "^0.9.4",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"css.gg": "^2.0.0",
 		"dotenv": "^16.0.3",
@@ -32,6 +33,7 @@
 	},
 	"devDependencies": {
 		"@rollup/plugin-typescript": "^11.0.0",
+		"@types/cookie-parser": "^1.4.3",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/express-handlebars": "^6.0.0",
