--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.17.1",
 		"express-handlebars": "^6.0.2",
+		"js-cookie": "^3.0.1",
 		"jsonwebtoken": "^9.0.0",
 		"luxon": "^3.2.1",
 		"mongodb": "^4.11.0",
