feat: add userCreationvalidator user creation can now be disabled using the app settings

--- a/src/server/config/config.json
+++ b/src/server/config/config.json
@@ -1,7 +1,7 @@
 {
 	"admin": {
 		"users": {
-			"enableUserCreation": true,
+			"enableUserCreation": false,
 			"initialUserWasCreated": false
 		}
 	}
