feat: add responder for validator middleware

--- a/src/server/config/config.json
+++ b/src/server/config/config.json
@@ -1,8 +1,7 @@
 {
 	"admin": {
 		"users": {
-			"enableUserCreation": false,
-			"initialUserWasCreated": false
+			"enableUserCreation": true
 		}
 	}
 }
