chore: flatteneed app config

--- a/src/server/config/config.json
+++ b/src/server/config/config.json
@@ -1,7 +1,4 @@
 {
-	"admin": {
-		"users": {
-			"enableUserCreation": true
-		}
-	}
+	"enableUserCreation": true,
+	"wasSuperUserCreated": false
 }
