--- a/package.json
+++ b/package.json
@@ -1,53 +1,59 @@
 {
-	"name": "21_typescript_express",
-	"version": "1.0.0",
-	"description": "Powered by MongoDB ChangeStreams, this application provides a simple realtime notification service for Ghost CMS blogging websites. It is my submission for the dev.to 2022 MongoDB Hackathon.",
-	"main": "src/index.ts",
-	"scripts": {
-		"dev": "concurrently \"nodemon --ignore ./src/server/config/config.json src/server/index.ts\" \"rollup --config rollup.config.mjs --watch\"",
-		"build": "rimraf -r dist && rollup --config rollup.config.mjs",
-		"start": "node dist/index.js",
-		"serve": "npm run build && npm run start"
-	},
-	"author": "tq-bit",
-	"license": "MIT",
-	"dependencies": {
-		"@sinclair/typebox": "^0.25.21",
-		"@types/bcrypt": "^5.0.0",
-		"ajv": "^8.12.0",
-		"ajv-formats": "^2.1.1",
-		"axios": "^1.3.4",
-		"bcrypt": "^5.1.0",
-		"bulma": "^0.9.4",
-		"cookie-parser": "^1.4.6",
-		"cors": "^2.8.5",
-		"css.gg": "^2.0.0",
-		"dotenv": "^16.0.3",
-		"express": "^4.17.1",
-		"express-handlebars": "^6.0.2",
-		"js-cookie": "^3.0.1",
-		"jsonwebtoken": "^9.0.0",
-		"luxon": "^3.2.1",
-		"mongodb": "^4.11.0",
-		"vitest": "^0.27.3",
-		"winston": "^3.3.3"
-	},
-	"devDependencies": {
-		"@rollup/plugin-typescript": "^11.0.0",
-		"@types/cookie-parser": "^1.4.3",
-		"@types/cors": "^2.8.12",
-		"@types/express": "^4.17.13",
-		"@types/express-handlebars": "^6.0.0",
-		"@types/js-cookie": "^3.0.2",
-		"@types/jsonwebtoken": "^9.0.1",
-		"@types/luxon": "^3.2.0",
-		"@types/node": "^17.0.0",
-		"concurrently": "^7.6.0",
-		"nodemon": "^2.0.15",
-		"rimraf": "^3.0.2",
-		"rollup": "^3.10.0",
-		"rollup-plugin-scss": "^3.0.0",
-		"sass": "^1.57.1",
-		"ts-node": "^10.4.0"
-	}
+  "name": "21_typescript_express",
+  "version": "1.0.0",
+  "description": "Powered by MongoDB ChangeStreams, this application provides a simple realtime notification service for Ghost CMS blogging websites. It is my submission for the dev.to 2022 MongoDB Hackathon.",
+  "main": "src/index.ts",
+  "scripts": {
+    "dev": "concurrently \"nodemon --ignore ./src/server/config/config.json src/server/index.ts\" \"rollup --config rollup.config.mjs --watch\"",
+    "build": "rimraf -r dist && rollup --config rollup.config.mjs",
+    "start": "node dist/index.js",
+    "serve": "npm run build && npm run start",
+    "lint": "eslint ./src/** --fix"
+  },
+  "author": "tq-bit",
+  "license": "MIT",
+  "dependencies": {
+    "@sinclair/typebox": "^0.25.21",
+    "@types/bcrypt": "^5.0.0",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "bulma": "^0.9.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "css.gg": "^2.0.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "express-handlebars": "^6.0.2",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "luxon": "^3.2.1",
+    "mongodb": "^4.11.0",
+    "vitest": "^0.27.3",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/express-handlebars": "^6.0.0",
+    "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/luxon": "^3.2.0",
+    "@types/node": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.16.0",
+    "concurrently": "^7.6.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.15",
+    "rimraf": "^3.0.2",
+    "rollup": "^3.10.0",
+    "rollup-plugin-scss": "^3.0.0",
+    "sass": "^1.57.1",
+    "ts-node": "^10.4.0"
+  }
 }
