chore: update env.example #1

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
-API_HOST=0.0.0.0
+API_HOST=127.0.0.1
 API_PORT=3000
 
-MONGO_HOST="mongodb+srv://<atlas-user>:<atlas-password>@<atlas-url>/?retryWrites=true&w=majority"
-MONGO_USER=<atlas-user>
-MONGO_PASSWORD=<atlas-password>
+# MONGO_HOST="mongodb+srv://ghost_notifier:qUps1Y0aWZXkMXcu@smallzee.eprly.mongodb.net/?retryWrites=true&w=majority"
+MONGO_HOST="mongodb://<username>:<password>@localhost:27017/?retryWrites=true&w=majority"
+MONGO_USER=mongoapp
+MONGO_PASSWORD=supersecret
 
-# Optional for notifications on your lametric clock
-# LAMETRIC_IP=<your-lametric-ip-address>
-# LAMETRIC_API_KEY=<your-lametric-key>
+JWT_KEY=supersecret
